namespace foll_backend.EmergencyAnalytics.Application.Internal.Notifications;

public static class EmergencyAnalyticsEventTypes
{
    public const string IncidentOpenedV1 = "emergency-analytics.incident-opened.v1";
    public const string IncidentClosedV1 = "emergency-analytics.incident-closed.v1";
}
